# flowml

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
flowml/: __init__.py  pipefill.py  tensorboard.py  utils.py
flowml/models/: __init__.py  base.py
flowml/models/pytorch/: __init__.py  base.py  utils.py
flowml/models/pytorch/architectures/: lstm.py  mlp.py  transformer.py
flowml/models/pytorch/drivers/: lstm_autoregressive.py  lstm_direct_regressor.py  mlp_regressor.py  transformer_regressor.py
flowml/models/xgboost/: __init__.py  regressor.py
tests/: conftest.py  test_models.py  test_pipefill.py
